tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Nethershard-AAAAAAAAAAAAAAAAAAAM4g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3298,
  "prerequisites": [
    2214,
    2223
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Critical for your Ichor production.\n\n[note]You will need to breed through a bunch of elemental bees that don't have quests to actually get to it.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nether Shard",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2214,
    2223
  ],
  "rewards": [],
  "tasks": []
}
