tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Nickel-AAAAAAAAAAAAAAAAAAAIkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2194,
  "prerequisites": [
    2193,
    2162
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nickel bees provide a pretty useful resource. You'll need a block of Nickel. Breed them from Iron and Copper.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nickel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2193,
    2162
  ],
  "rewards": [],
  "tasks": []
}
