tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Oil-AAAAAAAAAAAAAAAAAAAIdw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2167,
  "prerequisites": [
    2166,
    2168
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, Black Gold. The Oil bee, with proper... encouragement... can take care of all your power and chemical needs for quite some time. An alternate bee, Oily, provides slightly more oil but has a longer breeding chain. It is below the Magical bees. Breed them from Coal and Sticky Resin.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2166,
    2168
  ],
  "rewards": [],
  "tasks": []
}
