tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Ordered-AAAAAAAAAAAAAAAAAAAIuA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2232,
  "prerequisites": [
    2212,
    2219
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ordered bees require Ordered Crystal Clusters. They can produce Order Infused Dust. Breed them from Arcane and Ethereal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ordered",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2212,
    2219
  ],
  "rewards": [],
  "tasks": []
}
